# Exe_Recru

./: .gitignore  Dockerfile  README.md  check_locale.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  startup.sh  test.wsd
.github/workflows/: docker-image.yml
app/: __init__.py
app/core/: base_model.py  config.py
app/enums/: __init__.py  user_enums.py
app/exceptions/: exception.py  handlers.py
app/http/: oauth2.py
app/jobs/: celery_worker.py  tasks.py
app/locales/: en.json  vi.json
app/middleware/: websocket_middleware.py
app/modules/: __init__.py
app/modules/agent/: __init__.py
app/modules/agentic_rag/: README.md  __init__.py  config.py
app/static/: index.html  scripts.js  styles.css  test_question_composer.css  test_question_composer.html  test_question_composer.js
app/utils/: file_extraction.py  filter_utils.py  generate_jwt.py  oauth_utils.py  otp_utils.py  password_utils.py  pdf.py  redis_client.py
cv_sessions/: a87c01f8-4b3c-4536-a8c9-6ab94ea4bf46.json  fa4dbbf3-7e8b-4a50-926d-bde8e2dd0303.json
results/: CV Nguyen Luong Tuan (K17 HCM) - ai intern-TopCV.vn.pdf.json  CV Nguyễn Trọng Tín - SE171437_Nguyentrongtin-TopCV.vn.json
sessions/: 460e09ab-c58a-4c91-a121-62ba17ad7952.json  69cbe392-24d8-4c1a-b6c0-4d81885aee93.json  881e2c75-2621-4f7e-a7c8-e26962a44a34.json  91d3d33d-4636-4f8f-925d-85bf9fb4bc20.json  cecd423e-6d48-49d2-aaef-e760390885c8.json  ee1f3424-bce6-4665-b619-d9a40053a6de.json  ee7618ad-1e16-4e95-a29d-a6d8ba5a3789.json  f9866b26-e4ec-4694-9677-88aaa4906e5a.json  fa4dbbf3-7e8b-4a50-926d-bde8e2dd0303.json
(+181 files in other folders)
