[project]
name = "recru-api"
version = "2.0.0"
description = "Recruitment API with FastAPI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 200
target-version = "py313"
exclude = [
  "meobeo",
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "alembic",
  "node_modules"
]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
  "E402",  # Module level import not at top of file,
  "E712",  # Comparison to True should be 'if cond is True:' or 'if cond:' 
]
fixable = ["ALL"]
unfixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 72
preview = true

[tool.ruff.analyze]
detect-string-imports = true
direction = "Dependents"
exclude = ["tests/*", "scripts/*", "meobeo/*"]